rearranging of the graphs

--- a/72_2D_MFPADs_CH11_experiment.ipynb
+++ b/72_2D_MFPADs_CH11_experiment.ipynb
@@ -368,7 +368,7 @@
     "#smart flipping for the single 72 MFPAD image. Has to be in cos, do the phi just as a check\n",
     "MFPAD_RCLCR=[]\n",
     "\n",
-    "#sum helicities: -cos(theta), phi+180 in photn coordiantes\n",
+    "#sum helicities: -cos(theta), phi+180 in photon coordiantes\n",
     "for j in range(12):\n",
     "    for i in range(6):\n",
     "        if j>5:\n",
@@ -466,11 +466,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax1= plt.subplots(1, figsize=(12, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).T, cmap=cmap_temp, levels=15)\n",
-    "# cs1=ax1.contourf(phiM,cosM,MFPAD_SCL_sum.T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"SCR tot MFPAD\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)"
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).T, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"SCR tot MFPAD norm 2\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).min(),fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -479,10 +488,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax1= plt.subplots(1, figsize=(12, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"MFPAD tot norm\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)"
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"SCR tot MFPAD norm 2\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([MFPAD_tot_sum.min(),MFPAD_tot_sum.max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -491,22 +510,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax1= plt.subplots(1, figsize=(12, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,MFPAD_tottest, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"MFPAD KIlian norm tot\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax1= plt.subplots(1, figsize=(12, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,MFPAD_tottest, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"MFPAD KIlian tot\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)"
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,MFPAD_tottest, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"total MFPAD KIlian norm\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([MFPAD_tottest.min(),MFPAD_tottest.max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/total_MFPAD_kilian_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -519,14 +536,15 @@
     "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
     "    #old adding up\n",
     "    ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_SCLCR_phi[i],0.3,0.6).T, levels=5)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    # ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_SCLCR_phi_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_SCLCR_phi_smth_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -536,18 +554,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SUM of S enantiomers two different helicities\n",
+    "#SUM of R enantiomers two different helicities\n",
     "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
     "    #old adding up\n",
     "    ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_RCLCR_phi[i],0.3,0.6).T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    # ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_RCLCR_phi_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_RCLCR_phi_smth_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TOTAL sum of enantiomers and helicities smoothed\n",
+    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "    ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_totordered_phi[i],0.3,0.6).T)\n",
+    "    ax.tick_params(labelsize=12)\n",
+    "    # ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
+    "\n",
+    "fugi.overlaygraph(fig)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_total_phi_smth_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -558,13 +598,14 @@
    "outputs": [],
    "source": [
     "#TOTAL sum of enantiomers and helicities\n",
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
-    "    ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_totordered_phi[i],0.3,0.6).T)\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.revel()) :\n",
+    "    ax.contourf(phiM,cosM,MFPAD_totordered_phi[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_total_phi_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
@@ -577,15 +618,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#unsorted non-smoothed version\n",
-    "\n",
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "for i,ax in zip(range(72),axes.rvel()) :\n",
     "    ax.contourf(phiM,cosM,MFPAD_SCR_cos[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    # ax.text(0, 0, cosphi_adj[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    #ax.text(0, 0, cosphi_adj_cos[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_SCR_cos_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
@@ -598,17 +637,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#unsorted non-smoothed version\n",
-    "\n",
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#NOTE IT IS NEEDED TO ADD A COLORBAR! newxis are creaed in overlaygraph according to the fig size!\n",
+    "#colorbar like this is squeezing in the axis, find a way to have it as an object!\n",
+    "# fugi = reload(fugi)\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "# aspect=(phiM.max()/cosM.max())\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
-    "    ax.contourf(phiM,cosM,MFPAD_SCL_cos[i].T)\n",
+    "for i,ax in zip(range(72),axes.ravel()):\n",
+    "    cs=ax.contourf(phiM,cosM,MFPAD_SCL_cos[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    # ax.text(0, 0, cosphi_adj[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    # ax.set_aspect(aspect)\n",
+    "    #ax.text(0, 0, cosphi_adj_cos[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
-    "fugi.overlaygraph(fig)\n",
+    "fugi.overlaygraph(fig)#, title=\"MFPAD SCL\")\n",
+    "# fig.colorbar(cs, ax=axes.ravel().tolist())\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_SCL_cos_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
@@ -619,13 +662,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
     "    ax.contourf(phiM,cosM,MFPAD_SCR_phi[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_SCR_phi_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
@@ -638,13 +682,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
     "    ax.contourf(phiM,cosM,MFPAD_SCL_phi[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_SCL_phi_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
@@ -657,15 +702,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "for i,ax in zip(range(72),axes.ravel()) :\n",
     "    ax.imshow(fugi.smoothgauss(MFPAD_RCR_cos[i],0.3,0.6).T, extent=[phiM[0],phiM[-1],cosM[0],cosM[-1]], interpolation='quadric', cmap=\"viridis\", aspect=\"auto\")\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    #ax.text(0, 0, cosphi_adj_cos[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_RCR_cos_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -675,15 +721,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
     "    ax.contourf(phiM,cosM,MFPAD_RCR_phi[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
+    "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
     "\n",
     "fugi.overlaygraph(fig)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_RCR_phi_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -693,33 +741,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
-    "fig, axes = plt.subplots(6,12, figsize=(25, 12), sharex='col', sharey='row')\n",
-    "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
-    "    ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_RCR_phi[i],0.3,0.6).T)\n",
-    "    ax.tick_params(labelsize=12)\n",
-    "    # ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
-    "    \n",
-    "fugi.overlaygraph(fig)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
-    "    ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_SCR_phi[i],0.3,0.6).T)\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "    ax.contourf(phiM,cosM,MFPAD_RCL_phi[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    #ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
-    "    \n",
+    "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
+    "\n",
     "fugi.overlaygraph(fig)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_RCL_phi_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
   },
@@ -729,15 +761,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.T.flatten()) :\n",
-    "    ax.contourf(phiM,cosM,fugi.smoothgauss(MFPAD_SCL_phi[i],0.3,0.6).T)    \n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
+    "    ax.contourf(phiM,cosM,MFPAD_RCL_cos[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
-    "    #ax.text(0, 0, cosphi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=18)\n",
-    "    \n",
+    "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
+    "\n",
     "fugi.overlaygraph(fig)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_RCL_cos_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
     "plt.show()"
    ]
   },
