introduction of energy single an multiple plot go

--- a/b1_map_CH11.ipynb
+++ b/b1_map_CH11.ipynb
@@ -52,6 +52,8 @@
     "\n",
     "loc=path+dirs[0]\n",
     "\n",
+    "en=\"KE=11.5eV\"#\"KE=3eV\"#\"KE=4eV\"#\"KE=6.1eV\"#\"KE=8.2eV\"\n",
+    "\n",
     "##550eV - 11.5eV CH9\n",
     "#update nov Kilian binning (36,18)\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
@@ -433,23 +435,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = make_subplots(rows=1, cols=2,\n",
-    "                    x_title='phi_photon [DEG]',\n",
-    "                    y_title='cos(theta) [adm]',\n",
-    "                    subplot_titles=('b1 PHI ordered', 'Smoothing'))\n",
-    "\n",
-    "fig.add_trace(go.Contour(z=param_matrix_cos[:,0,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, contours=dict(start=-0.18, end=0.18, size=0.025)), 1, 1)\n",
-    "fig.add_trace(go.Contour(z=param_matrix_cos[:,0,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.75, colorscale=cmap_temp_go,contours=dict(start=-0.18, end=0.18, size=0.025)), 1, 2)\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    # coloraxis=dict(colorscale=Seismic_r),\n",
-    "    # showlegend=False,\n",
-    "    autosize=False,\n",
-    "    width=900,\n",
-    "    height=450,\n",
-    "    margin=dict(l=5,r=5,b=25,t=25)\n",
-    "    )\n",
-    "\n",
+    "# fugi = reload(fugi)\n",
+    "limits=[-0.18,0.18,0.025]\n",
+    "fig=fugi.plotgo_single(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1map_S_CR-CL_cos_experiment\",limits=limits)\n",
     "fig.show()"
    ]
   },
@@ -468,42 +456,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#NOTE: THE SCALE IS FAKE FOR PLOT 2 AND 6!\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "\n",
-    "fig = make_subplots(rows=6, cols=2, vertical_spacing=0.015,\n",
-    "                    x_title='phi_photon [DEG]',\n",
-    "                    y_title='cos(theta) [adm]',\n",
-    "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
-    "\n",
-    "for i in range(6):\n",
-    "    if i==1 or i==3 or i==5:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.2)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.2)), i+1, 2)\n",
-    "    else:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.18, end=0.18, size=0.025)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.18, end=0.18, size=0.025)), i+1, 2)\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    # coloraxis=dict(colorscale=Seismic_r),\n",
-    "    # showlegend=False,\n",
-    "    autosize=False,\n",
-    "    # width=800,\n",
-    "    height=1500,\n",
-    "    margin=dict(l=0,r=0,b=25,t=25)\n",
-    "    )\n",
-    "\n",
-    "fig.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fugi = reload(fugi)\n",
+    "limits=[[-1,1,0.25],[-0.18,0.18,0.025]]\n",
+    "fig=fugi.plotgo_multiple(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1-6map_S_CR-CL_cos_experiment\",limits=limits)\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -571,23 +536,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = make_subplots(rows=1, cols=2,\n",
-    "                    x_title='phi_photon [DEG]',\n",
-    "                    y_title='cos(theta) [adm]',\n",
-    "                    subplot_titles=('b1 PHI ordered', 'Smoothing'))\n",
-    "\n",
-    "fig.add_trace(go.Contour(z=param_matrix_cos[:,0,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, contours=dict(start=-0.18, end=0.18, size=0.025)), 1, 1)\n",
-    "fig.add_trace(go.Contour(z=param_matrix_cos[:,0,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.75, colorscale=cmap_temp_go,contours=dict(start=-0.18, end=0.18, size=0.025)), 1, 2)\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    # coloraxis=dict(colorscale=Seismic_r),\n",
-    "    # showlegend=False,\n",
-    "    autosize=False,\n",
-    "    width=900,\n",
-    "    height=450,\n",
-    "    margin=dict(l=5,r=5,b=25,t=25)\n",
-    "    )\n",
-    "\n",
+    "# fugi = reload(fugi)\n",
+    "limits=[-0.18,0.18,0.025]\n",
+    "fig=fugi.plotgo_single(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1map_R_CR-CL_cos_experiment\",limits=limits)\n",
     "fig.show()"
    ]
   },
@@ -607,31 +558,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOTE: THE SCALE IS FAKE FOR PLOT 2 AND 6!\n",
-    "fig = go.Figure()\n",
-    "\n",
-    "fig = make_subplots(rows=6, cols=2, vertical_spacing=0.015,\n",
-    "                    x_title='phi_photon [DEG]',\n",
-    "                    y_title='cos(theta) [adm]',\n",
-    "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
-    "\n",
-    "for i in range(6):\n",
-    "    if i==1 or i==3 or i==5:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.2)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.2)), i+1, 2)\n",
-    "    else:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.18, end=0.18, size=0.025)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.18, end=0.18, size=0.025)), i+1, 2)\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    # coloraxis=dict(colorscale=Seismic_r),\n",
-    "    # showlegend=False,\n",
-    "    autosize=False,\n",
-    "    # width=800,\n",
-    "    height=1500,\n",
-    "    margin=dict(l=0,r=0,b=25,t=25)\n",
-    "    )\n",
-    "\n",
+    "fugi = reload(fugi)\n",
+    "limits=[[-1,1,0.25],[-0.18,0.18,0.025]]\n",
+    "fig=fugi.plotgo_multiple(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1-6map_R_CR-CL_cos_experiment\",limits=limits)\n",
     "fig.show()"
    ]
   },
@@ -726,23 +655,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = make_subplots(rows=1, cols=2,\n",
-    "                    x_title='phi_photon [DEG]',\n",
-    "                    y_title='cos(theta) [adm]',\n",
-    "                    subplot_titles=('b1 PHI ordered', 'Smoothing'))\n",
-    "\n",
-    "fig.add_trace(go.Contour(z=param_matrix_cos[:,0,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, contours=dict(start=-0.18, end=0.18, size=0.025)), 1, 1)\n",
-    "fig.add_trace(go.Contour(z=param_matrix_cos[:,0,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.75, colorscale=cmap_temp_go,contours=dict(start=-0.18, end=0.18, size=0.025)), 1, 2)\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    # coloraxis=dict(colorscale=Seismic_r),\n",
-    "    # showlegend=False,\n",
-    "    autosize=False,\n",
-    "    width=900,\n",
-    "    height=450,\n",
-    "    margin=dict(l=5,r=5,b=25,t=25)\n",
-    "    )\n",
-    "\n",
+    "# fugi = reload(fugi)\n",
+    "limits=[-0.18,0.18,0.025]\n",
+    "fig=fugi.plotgo_single(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1map_R-S_cos_experiment\",limits=limits)\n",
     "fig.show()"
    ]
   },
@@ -762,40 +677,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NOTE: THE SCALE IS FAKE FOR PLOT 2 AND 6!\n",
-    "fig = go.Figure()\n",
-    "\n",
-    "fig = make_subplots(rows=6, cols=2, vertical_spacing=0.015,\n",
-    "                    x_title='phi_photon [DEG]',\n",
-    "                    y_title='cos(theta) [adm]',\n",
-    "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
-    "\n",
-    "for i in range(6):\n",
-    "    if i==1 or i==3 or i==5:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.2)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.2)), i+1, 2)\n",
-    "    else:\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.18, end=0.18, size=0.025)), i+1, 1)\n",
-    "        fig.add_trace(go.Contour(z=param_matrix_cos[:,i,0], x=xgo_cos, y=ygo_cos, line_smoothing=0.85, colorscale=cmap_temp_go, legendgroup=\"yes\", contours=dict(start=-0.18, end=0.18, size=0.025)), i+1, 2)\n",
-    "\n",
-    "fig.update_layout(\n",
-    "    # coloraxis=dict(colorscale=Seismic_r),\n",
-    "    # showlegend=False,\n",
-    "    autosize=False,\n",
-    "    # width=800,\n",
-    "    height=1500,\n",
-    "    margin=dict(l=0,r=0,b=25,t=25)\n",
-    "    )\n",
-    "\n",
+    "# fugi = reload(fugi)\n",
+    "limits=[[-1,1,0.25],[-0.18,0.18,0.025]]\n",
+    "fig=fugi.plotgo_multiple(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1-6map_R-S_cos_experiment\",limits=limits)\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
